Kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/websocket-services: "code-server-svc, mongoclient-svc"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: code-server.p-lao.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: code-server-svc
          servicePort: 80
